<resources>
    <string name="app_name">sub33</string>
    <string name="rating">Rating:</string>
    <string name="tab_text_1">Movie</string>
    <string name="tab_text_2">Tv Show</string>
    <string name="tab_text_3">Favorite Movie</string>
    <string name="tab_text_4">Favorite Tv Show</string>
    <string name="description">Description</string>
    <string name="genre">Genre</string>
    <string name="duration">Duration</string>
    <string name="film_title">Film Title</string>
    <string name="poster">Poster</string>
    <string name="release_date">Release Date</string>
    <string name="overview">Overview</string>
    <string name="img_preview_darker">image_preview_darker</string>
    <string name="failed_load">Failed to Load Data</string>
    <string name="add_to_favorite">Add To Favorite</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profilemovie">profilemovie</string>
</resources>